--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-cabeca">
         <!-- Seção do ícone com uma imagem -->
         <div class="icone">
-            <img src="imagens/hatori.jpg" alt="pombo hatori">
+            <img src="imagens/personagens/hatori.jpg" alt="pombo hatori">
         </div>
 
         <!-- Seção de texto com uma citação -->
